fix(server): provide extra whitespace in .audit-detail-pane

--- a/packages/server/src/ui/routes/build-view/audit-detail/audit-detail-pane.css
+++ b/packages/server/src/ui/routes/build-view/audit-detail/audit-detail-pane.css
@@ -11,6 +11,7 @@
   left: 50%;
   bottom: 0;
   z-index: 5;
+  padding-bottom: 70vh;
 
   overflow-x: hidden;
   overflow-y: auto;
